--- a/src/views/Dog-View.css
+++ b/src/views/Dog-View.css
@@ -1,7 +1,11 @@
 .loader {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   position: relative;
-  width: 40px;
-  height: 60px;
+  width: 200px;
+  height: 500px;
   animation: heartBeat 1.2s infinite cubic-bezier(0.215, 0.61, 0.355, 1);
 }
 
@@ -13,7 +17,7 @@
   height: 60px;
   border-radius: 50px 50px 0 0;
   position: absolute;
-  left: 0;
+  left: 50vw;
   bottom: 0;
   transform: rotate(45deg);
   transform-origin: 50% 68%;
